src/pages/MainPage/components/JourneySection/JourneySection.scss
@mixin for-phone-only {
  @media (max-width: 440px) {
    @content;
  }
}

.JourneySection {
  overflow: hidden;
  padding: 0 98px 0 160px;
  margin-bottom: 104px;
  position: relative;

  @include for-phone-only {
    padding: 64px 16px 0 16px;
    margin-bottom: 80px;
  }

  .grey-square {
    height: 200px;
    width: calc(100% - 70px);
    background-color: var(--grey-50);
    border-radius: 16px;
    margin-left: 70px;
    z-index: -1;

    @include for-phone-only {
      position: absolute;
      top: 50px;
      right: -30px;
      height: 124px;
      width: 100%;
      margin-left: 0;
    }
  }

  .journey-content {
    display: flex;
    gap: 24px;
    margin-top: -160px;

    @include for-phone-only {
      flex-direction: column-reverse;
      gap: 0;
      margin-top: 0;
    }

    .journey-message {
      display: inline-block;
      color: var(--green-600);
      padding: 8px 20px;
      border-radius: 100px;
      background-color: var(--grey-100);

      .year-number {
        font-weight: bold;
        margin-right: 5px;
      }
    }

    .journey-title {
      font-size: 48px;
      margin-bottom: 0;
      margin-top: 12px;
    }

    .journey-text {
      font-size: 24px;
      line-height: 24px;
    }

    .image-content {
      position: relative;

      .images {
        display: flex;

        .image-1 {
          z-index: 1;
        }

        @include for-phone-only {
          & > div {
            width: 50%;
            height: 50%;
          }

          .image-1 {
            z-index: 1;
            width: 50%;
            height: 260px;

            img {
              width: 100%;
              height: 100%;
            }
          }

          .image-2 {
            height: 260px;
            img {
              width: 100%;
              height: 100%;
            }
          }
        }
      }

      .green-circle {
        position: absolute;
        width: 208px;
        height: 208px;
        border-radius: 50%;
        box-sizing: border-box;
        border: 30px solid var(--green-400);
        margin-top: -130px;
        margin-left: 200px;

        @include for-phone-only {
          margin-top: -100px;
          margin-left: 100px;

          width: 160px;
          height: 160px;
          border: 25px solid var(--green-400);
        }
      }
    }

    .text-content {
      .journey-title {
        font-size: 32px;
      }
      .journey-text {
        font-size: 16px;
      }
    }
  }
}

